kyverno/policies/workloads/test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-privileged-containers
policies:
  - ../resource-limits.yaml
resources:
  - test-resource-limits.yaml
results:
  # restrict-cpu-limits
  - policy: restrict-workload-resource-limits
    rule: restrict-cpu-limits
    resources:
      [
        "test-deployment-resource-limits-not-set",
        "test-deployment-resource-limits-ok",
        "test-deployment-resource-limits-memory-too-high",
      ]
    kind: Deployment
    result: pass
  - policy: restrict-workload-resource-limits
    rule: restrict-cpu-limits
    resources: ["test-deployment-resource-limits-init-cpu-too-high"]
    kind: Deployment
    result: fail
  - policy: restrict-workload-resource-limits
    rule: restrict-cpu-limits
    resources: ["test-deployment-resource-limits-cpu-too-high"]
    kind: Deployment
    result: fail
  - policy: restrict-workload-resource-limits
    rule: restrict-cpu-limits
    resources:
      [
        "test-daemonset-cpu-limit-ok",
        "test-daemonset-cpu-limit-decimal-ok",
        "test-daemonset-cpu-limit-millicores-ok",
      ]
    kind: DaemonSet
    result: pass
  - policy: restrict-workload-resource-limits
    rule: restrict-cpu-limits
    resources:
      [
        "test-daemonset-cpu-limit-too-high",
        "test-daemonset-cpu-limit-decimal-too-high",
        "test-daemonset-cpu-limit-millicores-too-high",
      ]
    kind: DaemonSet
    result: fail
  - policy: restrict-workload-resource-limits
    rule: restrict-cpu-limits
    resources: ["test-statefulset-resource-limits-too-high"]
    kind: StatefulSet
    result: fail
    # restrict-memory-limits
  - policy: restrict-workload-resource-limits
    rule: restrict-memory-limits
    resources:
      [
        "test-deployment-resource-limits-not-set",
        "test-deployment-resource-limits-ok",
        "test-deployment-resource-limits-cpu-too-high",
      ]
    kind: Deployment
    result: pass
  - policy: restrict-workload-resource-limits
    rule: restrict-memory-limits
    resources:
      [
        "test-deployment-resource-limits-init-memory-too-high",
        "test-deployment-resource-limits-memory-too-high",
      ]
    kind: Deployment
    result: fail
  - policy: restrict-workload-resource-limits
    rule: restrict-memory-limits
    resources: ["test-statefulset-resource-limits-too-high"]
    kind: StatefulSet
    result: fail
  - policy: restrict-workload-resource-limits
    rule: restrict-memory-limits
    resources:
      ["test-replicaset-memory-limit-ok", "test-replicaset-memory-limit-mi-ok"]
    kind: ReplicaSet
    result: pass
  - policy: restrict-workload-resource-limits
    rule: restrict-memory-limits
    resources:
      [
        "test-cronjob-memory-limit-too-high",
        "test-cronjob-memory-limit-mi-too-high",
      ]
    kind: CronJob
    result: fail
